# hermes

./: .gitignore  README.md
foundation/: 000_DOCUMENTATION_STANDARD.md  008_SYSTEM_ARCHITECTURE.md  FOUNDATION.md  GLOSSARY.md
governance/: AI_USAGE.md
governance/adr/: ADR-000-template.md  ADR-001-generalized-scope.md  ADR-002-lst-primary-outcome.md  ADR-003-acquisition-backend.md  ADR-004-criterion4-refinement.md
research_programs/RP001-surface-transformation-energy-balance/: EXPLORATORY_HYPOTHESES.md  HYPOTHESES.md  LITERATURE_BRIEFING_sections4-5.md  PRE_REGISTRATION_LOCK.md  RESEARCH_QUESTION.md
software/: .env.example  README.md  bootstrap.py  docker-compose.yml  pyproject.toml
software/data/: case_001_pilot_extraction.csv
software/examples/: check_case001_confounders.py  check_case001_confounders_geom.py  check_case001_pilot_sanity.py  check_pretransformation_landcover.py  check_water_proximity.py  compute_case001_clean_zone.py  export_case001_geometries.py  find_case001_control_areas.py  run_case001_pilot_extraction.py  search_landsat_example.py  select_case001_control_points.py  verify_case001_buffer.py  visualize_control_candidates.py
software/src/hermes/: __init__.py
software/src/hermes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
software/src/hermes/acquisition/: __init__.py  base.py  stac_planetary_computer.py
software/src/hermes/analysis/: __init__.py
software/src/hermes/database/: __init__.py
software/src/hermes/models/: __init__.py
software/src/hermes/normalisation/: __init__.py  landsat_optical.py  landsat_qa.py  season.py
software/src/hermes/reporting/: __init__.py
software/tests/: test_acquisition.py  test_bootstrap.py
(+4 files in other folders)
