[project]
name = "hermes"
version = "0.1.0"
description = "HERMES — Holistic Energy Research Model for Environmental Systems"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
